# ssm-ps-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
sam/: event.json  template-consumer.yml  template-store.yml
ssm_ps_demo/: __init__.py  consumer.py  store.py
